@startuml

class Simulation {
  List<Product>:  Products
  Cart: Cart
  List<Currency>: Currencies
  ---
  void : NextDay()
}

class Cart {
  List<Product> : Products
  List<ICartDiscountStrategy> : DiscountStrategies
  ---
  decimal : GetTotalPrice(Currency currency)
}


class Currency {
  string : IsoCode
  decimal : ExchangeRate
  ---
  decimal : ConvertTo(decimal amount, Currency fromCurrency)
}

class Product {
  string : Name
  decimal : Price
  int : Quality
  int : SellInDays
  List<IPriceStrategy>: PriceStrategies
  IQualityStrategy: QualityStrategy
  ---
  decimal : GetPrice(Currcency currency)
  void : UpdateQuality()
}

interface IPriceStrategy {
  decimal : CalculatePrice(Product product, decimal interimPrice)  
}

interface ICartDiscountStrategy {
  decimal : CalculateDiscountedPrice(Cart cart, decimal interimPrice)  
}

interface IQualityStrategy {
  void: UpdateQuality(Product product)  
}

class DefaultQualityStrategy
class AgedQualityStrategy
class ConjuredQualityStrategy
class LegendaryQualityStrategy
class TicketQualityStrategy

class DefaultPriceStrategy
class PercentageDiscountPriceStrategy {
  decimal: DiscountPercentage
}

class BulkCartDiscountStrategy {
  decimal: DiscountPercentage
  int: PieceAmount
}

IPriceStrategy <|-- DefaultPriceStrategy
IPriceStrategy <|-- PercentageDiscountPriceStrategy

IQualityStrategy <|-- DefaultQualityStrategy
IQualityStrategy <|-- AgedQualityStrategy
IQualityStrategy <|-- ConjuredQualityStrategy
IQualityStrategy <|-- LegendaryQualityStrategy
IQualityStrategy <|-- TicketQualityStrategy

ICartDiscountStrategy <|-- BulkCartDiscountStrategy

Cart "0..1" o-- "*" Product
Cart "*" o-- "*" ICartDiscountStrategy

Product "*" o-- "*" IPriceStrategy
Product "*" o-- "0..1" IQualityStrategy

Simulation "0..1" o-- "1..*" Product
Simulation "0..1" o-- "1" Cart
Simulation "0..1" o-- "1..*" Currency

@enduml